Table student {
  id int [pk]
  name varchar [not null]
  teacher_id int [not null]
}

Table teacher {
  id int [pk]
  name varchar [not null]
}

Table course_record {
  student_id int [not null]
  end_date datetime [not null]
  grade float

  indexes {
    (student_id, end_date) [pk]
  }
}

Ref: student.id < course_record.student_id
Ref: teacher.id - student.teacher_id